--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="title_activity_main">All Items</string>
     <string name="title_activity_addItem">Add Item</string>
     <string name="title_activity_viewItem">Viewing Item</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_image">Add Image</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -17,4 +19,5 @@
     <string name="menu_GPS">GPS</string>
     <string name="menu_location">Location History</string>
     <string name="menu_settings">Settings</string>
+    <string name="title_activity_item_maps">Map</string>
 </resources>
